[package]
name = "decimal-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.decimal]
path = ".."

# [[bin]]
# name = "fuzz_target_1"
# path = "fuzz_targets/fuzz_target_1.rs"
# test = false
# doc = false
# bench = false


[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "arithmetic"
path = "fuzz_targets/arithmetic.rs"
test = false
doc = false
bench = false
